# matmulfreellm

./: Dockerfile  Dockerfile.bak  Dockerfile.working  docker-compose.yml  entrypoint.sh  requirements.txt
pipconfig/: pip.conf
triton_files/: CMakeLists.txt  setup.py
